fix modal visibility issue

--- a/src/_components.scss
+++ b/src/_components.scss
@@ -332,7 +332,6 @@ textarea {
 
 //===================================================
 // MODAL
-// 
 // <div id="{data-target}" class="modal">
 //     <div class="modal__content">
 //         <span class="modal__close">&times;</span>
@@ -342,6 +341,7 @@ textarea {
 //===================================================
 
 .modal {
+  visibility: hidden;
   position: fixed;
   z-index: 99999;
   left: 0;
@@ -361,6 +361,7 @@ textarea {
   &.open {
     opacity: 1;
     transform: scale(1);
+    visibility: visible;
   }
 
   &__close {
